--- a/app/Resources/views/Address/new.html.twig
+++ b/app/Resources/views/Address/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}app:Resources:Contact:new{% endblock %}
+{% block title %}app:Resources:Address:new{% endblock %}
 
 {% block body %}
     <p><br></p>
-    {{ 'Dodaj nowy kontakt:' }}
+    {{ 'Dodaj adres:' }}
     {{ form(form) }}
 {% endblock %}
