--- a/app/Resources/views/Email/modify.html.twig
+++ b/app/Resources/views/Email/modify.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}app:Resources:Contact:new{% endblock %}
+{% block title %}app:Resources:Email:modify{% endblock %}
 
 {% block body %}
     <p><br></p>
-    {{ 'Dodaj nowy kontakt:' }}
+    {{ 'Edytuj email:' }}
     {{ form(form) }}
 {% endblock %}
+
