--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -18,7 +18,7 @@
         </ul>
         <h4><a href="{{ path('app_contact_new') }}">Dodaj nowy kontakt</a></h4>
         <h4><a href="{{ path('app_contact_showall') }}">Wyświetl swoje kontakty</a></h4>
-        
+        {#<h4><a href="{{ path('app_address_new') }}">Dodaj nowy adres</a></h4>#}
         </div>
     </div>
                 
