--- a/app/Resources/views/Band/create.html.twig
+++ b/app/Resources/views/Band/create.html.twig
@@ -1,10 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}app:Resources:Contact:modify{% endblock %}
+{% block title %}app:Resources:Band:create{% endblock %}
 
 {% block body %}
     <p><br></p>
-    {{ 'Modyfikuj kontakt:' }}
+    {{ 'Wybierz grupę:' }}
     {{ form(form) }}
 {% endblock %}
-
