--- a/app/Resources/views/Band/new.html.twig
+++ b/app/Resources/views/Band/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}app:Resources:Band:add{% endblock %}
+{% block title %}app:Resources:Band:new{% endblock %}
 
 {% block body %}
     <p><br></p>
