--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -12,13 +12,15 @@
         <h3><span>Contact Box to aplikacja pełniąca funkcję skrzynki kontaktowej.</span></h3>
         <h3>Użytkownicy aplikacji mają możliwość m.in.:</h3>
         <ul>
-            <li>Dodawania osób do swoje skrzynki kontaktowej</li>
+            <li>Dodawania osób do swojej skrzynki kontaktowej</li>
             <li>Wyświetlania swoich kontaktów</li>
             <li>Modyfikowania danych zapisanych osób</li>
+            <li>Dodowania kontaktów do grup</li>
         </ul>
         <h4><a href="{{ path('app_contact_new') }}">Dodaj nowy kontakt</a></h4>
         <h4><a href="{{ path('app_contact_showall') }}">Wyświetl swoje kontakty</a></h4>
-        {#<h4><a href="{{ path('app_address_new') }}">Dodaj nowy adres</a></h4>#}
+        <h4><a href="{{ path('app_band_showall') }}">Wyświetl grupy</a></h4>
+        
         </div>
     </div>
                 
